POC6/aws/terraform/main.tf
# -----------------------------
# VPC
# -----------------------------
resource "aws_vpc" "main" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name        = "IaCM-Migration-VPC"
    Environment = var.environment
    Source      = "CloudFormation-POC3"
    Owner       = var.owner
    Managed-By  = "Harness"
    Cost-Center = var.cost_center
  }
}

# -----------------------------
# Public Subnet
# -----------------------------
resource "aws_subnet" "public" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = true

  tags = {
    Name        = "IaCM-Public-Subnet"
    Environment = var.environment
  }
}

# -----------------------------
# Security Group
# -----------------------------
resource "aws_security_group" "web" {
  name = "shiva-iacm-poc3-stack-WebSecurityGroup-h3LZa8VFBHed"
  description = "Enable SSH and HTTP access"
  vpc_id = aws_vpc.main.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "IaCM-Web-SG"
    Environment = var.environment
  }
}
